tests/api/snapshots/api__user_api__add_user_fails_with_500_if_there_is_a_fatal_database_error.snap
---
source: tests/api/user_api.rs
expression: actual_msg
---
{
  "data": {
    "message": "Internal server error"
  },
  "status_code": 500
}
