tests/api/snapshots/api__user_api__add_user_returns_422_for_existing_data-duplicate username.snap
---
source: tests/api/user_api.rs
expression: actual_msg
---
{
  "data": {
    "message": "user with username 'user' already exists"
  },
  "status_code": 422
}
