tests/api/snapshots/api__user_api__add_user_returns_422_for_invalid_data-empty username.snap
---
source: tests/api/user_api.rs
expression: actual_msg
---
{
  "data": {
    "message": "username can't be empty"
  },
  "status_code": 422
}
