tests/api/snapshots/api__user_api__add_user_returns_422_for_invalid_data-invalid email.snap
---
source: tests/api/user_api.rs
expression: actual_msg
---
{
  "data": {
    "message": "email address 'user-example.com' is invalid"
  },
  "status_code": 422
}
