tests/api/snapshots/api__user_api__add_user_returns_422_for_invalid_data-missing username.snap
---
source: tests/api/user_api.rs
expression: actual_msg
---
{
  "data": {
    "message": "Failed to deserialize the JSON body into the target type: missing field `username` at line 1 column 36"
  },
  "status_code": 422
}
