tests/api/snapshots/api__user_api__add_user_returns_422_for_invalid_data-username with whitespace.snap
---
source: tests/api/user_api.rs
expression: actual_msg
---
{
  "data": {
    "message": "username cannot contain whitespace (got: 'with whitespace')"
  },
  "status_code": 422
}
